--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
-  "robotWidth": 0.75,
-  "robotLength": 1.0,
-  "holonomicMode": false,
+  "robotWidth": 0.52,
+  "robotLength": 0.635,
+  "holonomicMode": true,
   "generateJSON": false,
   "generateCSV": false
 }
